--- a/assignment/stylesheet.css
+++ b/assignment/stylesheet.css
@@ -1,4 +1,16 @@
 header {
 background-color: black;
 color: whitesmoke;
+text-align: center;
+}
+
+main {
+background-color: lightgrey;
+padding: 1em;
+}
+
+body {
+background-image: url("record.png");
+background-repeat: repeat;
+margin: 0px;
 }
